--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "bower": "~0.9.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-iconizr": "~0.2.0",
-    "grunt-sass": "~0.12.1",
-    "grunt-favicons": "~0.6.3",
-    "grunt-text-replace": "~0.3.11",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-notify": "~0.2.20",
-    "matchdep": "~0.1.2"
+    "grunt": "~0.4.5",
+    "bower": "~1.7.7",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-concat": "~1.0.0",
+    "grunt-contrib-uglify": "~0.11.1",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-autoprefixer": "~3.0.4",
+    "grunt-iconizr": "jkphl/grunt-iconizr#dev",
+    "grunt-sass": "~1.1.0",
+    "grunt-favicons": "~0.7.0",
+    "grunt-text-replace": "~0.4.0",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-notify": "~0.4.3",
+    "matchdep": "~1.0.1"
   }
 }
