--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "grunt-sass": "~1.2.1",
     "grunt-favicons": "~0.8.0",
     "grunt-text-replace": "~0.4.0",
+    "grunt-string-replace": "~1.2.1",
+    "imagemin-mozjpeg": "^5.1.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-copy": "~1.0.0",
     "grunt-notify": "~0.4.5",
     "matchdep": "~1.0.1"
