Add Spreespeicher venue

--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-    "grunt": "~1.0.1",
     "bower": "~1.8.4",
-    "grunt-contrib-watch": "~1.1.0",
-    "grunt-contrib-cssmin": "~2.2.1",
-    "grunt-contrib-concat": "~1.0.1",
-    "grunt-contrib-uglify": "~3.3.0",
-    "grunt-contrib-clean": "~1.1.0",
+    "grunt": "^1.0.3",
     "grunt-autoprefixer": "~3.0.4",
-    "grunt-iconizr": "jkphl/grunt-iconizr#dev",
-    "grunt-sass": "~2.1.0",
-    "grunt-favicons": "~0.8.0",
-    "grunt-text-replace": "~0.4.0",
-    "grunt-string-replace": "~1.3.1",
-    "imagemin-mozjpeg": "^7.0.0",
-    "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-contrib-htmlmin": "^2.4.0",
+    "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~2.2.1",
+    "grunt-contrib-htmlmin": "^2.4.0",
+    "grunt-contrib-imagemin": "^2.0.1",
+    "grunt-contrib-uglify": "~3.3.0",
+    "grunt-contrib-watch": "~1.1.0",
+    "grunt-favicons": "~0.8.0",
+    "grunt-iconizr": "github:jkphl/grunt-iconizr#dev",
     "grunt-notify": "~0.4.5",
+    "grunt-sass": "~2.1.0",
+    "grunt-string-replace": "~1.3.1",
+    "grunt-text-replace": "~0.4.0",
+    "imagemin-mozjpeg": "^7.0.0",
     "matchdep": "~2.0.0"
   }
 }
